# ai-quant-research-platform

./: .dockerignore  .env.example  .gitattributes  .gitignore  AGENTS.md  README.md  alembic.ini  logs.sh  migrate.sh  pyproject.toml  restart.sh  scanner.sh  setup.sh  start.sh  status.sh  stop.sh  test.sh
ai/: __init__.py  contracts.py  openai_compatible.py  prompts.py  safety.py
backend/: Dockerfile  __init__.py
backend/alembic/: README  env.py
backend/alembic/versions/: 20260613_0001_create_mvp_tables.py  20260613_0002_create_research_notes.py  20260613_0003_create_rag_knowledge_base.py  20260615_0004_create_daily_price_sync_ranges.py
backend/app/: config.py  main.py
backend/app/api/: __init__.py  errors.py  repository.py  routes.py  schemas.py
backend/app/database/: __init__.py  models.py  session.py
backend/app/services/: __init__.py  chan_analysis.py  local_daily_cache.py  local_daily_cache_sync.py  market_data_sync.py  rag_documents.py  research_notes.py
backend/tests/: test_api_postgres.py  test_chan_analysis.py  test_database_config.py  test_database_models.py  test_database_session.py  test_health.py  test_local_daily_cache.py  test_market_data_provider_config.py  test_market_data_sync.py  test_migrations.py  test_postgres_integration.py  test_rag_postgres.py
data/sample/: README.md  daily_prices.csv  stocks.csv
deployment/: compose.yaml
docs/: 01_product_requirements.md  02_system_design.md  03_database_design.md  04_api_design.md  05_development_roadmap.md  06_chan_theory_product_plan.md
frontend/: Dockerfile  README.md  eslint.config.js  index.html  package-lock.json  package.json  vitest.config.ts
frontend/src/: App.css  App.test.tsx  App.tsx  api.ts  chartData.test.ts  chartData.ts  index.css  types.ts
frontend/src/components/: KlineChart.test.tsx  KlineChart.tsx
rag/: __init__.py  chunking.py  embeddings.py  loaders.py
scanner/: Dockerfile  __init__.py  __main__.py  cli.py
scanner/ingestion/: __init__.py  asharehub_provider.py  baostock_provider.py  csv_provider.py  errors.py  repository.py  service.py  types.py
scanner/scanning/: __init__.py  errors.py  repository.py  service.py  types.py
scanner/signals/: __init__.py  rules.py  types.py
scanner/tests/: test_asharehub_provider.py  test_baostock_provider.py  test_cli.py  test_csv_provider.py  test_ingestion_postgres.py  test_scanner_postgres.py  test_signal_rules.py
scripts/: cache_baostock_daily.py  lib.sh
tests/: README.md  test_ai_research_notes.py  test_cache_baostock_daily.py  test_rag.py
