[build-system]
requires = ["setuptools>=80"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-quant-research-platform"
version = "0.1.0"
description = "Research and education platform for quantitative market analysis."
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "fastapi>=0.115,<1.0",
    "pydantic-settings>=2.7,<3.0",
    "uvicorn[standard]>=0.34,<1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28,<1.0",
    "mypy>=1.15,<2.0",
    "pytest>=8.3,<9.0",
    "pytest-cov>=6.0,<8.0",
    "ruff>=0.11,<1.0",
]

[project.scripts]
quant-scanner = "scanner.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["backend*", "scanner*"]

[tool.pytest.ini_options]
addopts = "-ra"
testpaths = ["backend/tests", "scanner/tests", "tests"]

[tool.ruff]
line-length = 88
target-version = "py311"

[tool.ruff.lint]
select = ["B", "E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["backend", "scanner"]

[tool.coverage.run]
branch = true
source = ["backend", "scanner"]

[tool.coverage.report]
show_missing = true
skip_covered = true
